--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,20 @@
 cmake_minimum_required(VERSION 3.20)
 project(nexoeditor)
 
+set(CMAKE_C_STANDARD 90)
+if(LINUX)
+    add_link_options(-fsanitize=address)
+    add_compile_options(-fsanitize=address)
+endif()
+
 include_directories("include")
 
-file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c")
+file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/core/*.c")
 
-add_executable(nexo ${SOURCES})
-target_link_libraries(nexo ncurses)
+add_library(nexocore STATIC ${SOURCES})
+
+add_executable(nexo "src/nexo/main.c")
+target_link_libraries(nexo nexocore ncurses)
+
+add_executable(nexotest "src/tests/tests.c")
+target_link_libraries(nexotest nexocore ncurses)
