widechars: it's atleast showing up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(nexoeditor)
 
-set(CMAKE_C_STANDARD 90)
+set(CMAKE_C_STANDARD 99)
 if(LINUX)
     add_link_options(-fsanitize=address)
     add_compile_options(-fsanitize=address -Wall -Wpedantic)
@@ -13,8 +13,8 @@ file(GLOB_RECURSE CORE_SOURCES CONFIGURE_DEPENDS "src/core/*.c")
 add_library(nexocore STATIC ${CORE_SOURCES})
 
 add_executable(nexo "src/nexo/main.c")
-target_link_libraries(nexo nexocore ncurses)
+target_link_libraries(nexo nexocore ncursesw)
 
 file(GLOB_RECURSE TESTS_SOURCES CONFIGURE_DEPENDS "src/tests/*.c")
 add_executable(nexotest ${TESTS_SOURCES})
-target_link_libraries(nexotest nexocore ncurses)
+target_link_libraries(nexotest nexocore ncursesw)
