--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(nexoeditor)
 set(CMAKE_C_STANDARD 99)
 if(LINUX)
     add_link_options(-fsanitize=address)
-		add_compile_options(-fsanitize=address -Wall -Wpedantic)
+		add_compile_options(-fsanitize=address -Wall -Wpedantic -Wcast-align -Wcast-qual -Wctor-dtor-privacy -Wdisabled-optimization -Wformat=2 -Winit-self -Wlogical-op -Wmissing-declarations -Wmissing-include-dirs -Wnoexcept -Wold-style-cast -Woverloaded-virtual -Wredundant-decls -Wshadow -Wsign-conversion -Wsign-promo -Wstrict-null-sentinel -Wstrict-overflow=5 -Wswitch-default -Wundef)
 endif()
 
 include_directories("include")
